--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.6",
-    "pg": "^8.5.0",
-    "sequelize": "^5.22.3"
+    "pg": "^8.5.1",
+    "sequelize": "^5.22.3",
+    "start": "^5.1.0"
   },
   "repository": {
     "type": "git",
